Bug: menu icons are not center aligned. #720

--- a/source/css/_common/components/header/menu.styl
+++ b/source/css/_common/components/header/menu.styl
@@ -24,6 +24,8 @@
 
     &:hover { border-bottom-color: $menu-link-hover-border; }
   }
+
+  .fa { margin-right: 5px; }
 }
 
 .use-motion .menu-item { opacity: 0; }
