--- a/source/css/_schemes/Pisces/_menu.styl
+++ b/source/css/_schemes/Pisces/_menu.styl
@@ -33,7 +33,6 @@
   }
 
   br { display: none; }
-  .fa { margin-right: 5px; }
 }
 
 .menu-item-active a {
